--- a/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
@@ -71,7 +71,7 @@
     {#<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.3/vue.js"></script>#}
     <script type="text/javascript" src="https://npmcdn.com/vue-select@latest"></script>
 <script src="http://maps.google.com/maps/api/js?language=en&libraries=places&key={{googlemaps.key}}"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.3/vue.js"></script>
+<script type="text/javascript" src="{{ asset('bundles/actedlegaldocs/js/vendor/vue.js') }}"></script>
 <script>
     jQuery.extend(jQuery.validator.messages, {
         required: "This field is required.",
