fix - showing order in chat room / add verifying existing artists in event / change event notify when create and connect event to artist / modify api canceling orders

--- a/src/Acted/LegalDocsBundle/Resources/views/Email/create_event_notify.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Email/create_event_notify.html.twig
@@ -27,9 +27,9 @@
         </ul>
         <p>
             You can reply instantly to this enquiry, or message me through our
-            <a href="{{ url('chat_room_list', {'userId': artist.id } ) }}">chatroom</a>.
+            <a href="{{ url('chat_room_list') }}">chatroom</a>.
             If you are not available, you just need to
-            <a href="{{ url('reject_offer', {'id': offer.id}) }}">click here</a>. </p>
+            <a href="{{ url('order_cancel', {'orderId': order.id}) }}">click here</a>. </p>
         <p>Many thanks & kind regards,</p>
         <p>{{ event.user.firstname }}</p>
     {% endautoescape %}
