removed const kayword

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
@@ -279,6 +279,7 @@
                                 </ul>
                             </article>
                         {% endfor %}
+                        {% for s in order.services %}
                         <article class="service act-extras">
                             <h3 class="package-name">Extra - 1</h3>
                             <ul class="">
