--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -148,7 +148,7 @@
                 </div>
                 <div class="row booking-confirm-container">
                     <div class="col-sm-6">
-                        <p class="deposit-info"><b>Deposit:</b> {{ order.depositAmout }} GBP received via secured payment <b class="non-refundable-info">(Non - refundable)</b></p>
+                        <p class="deposit-info"><b>Deposit:</b> {{ order.depositAmount }} GBP received via secured payment <b class="non-refundable-info">(Non - refundable)</b></p>
                         <p class="deposit-info"><b>Balance:</b> {{ order.depositBallance }} GBP unpaid</p>
                     </div>
                     <div class="col-sm-6 booking-confirm-list no-pad">
