removed const kayword

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
@@ -307,8 +307,8 @@
                 <div class="row">
                     <div class="text-box">
                         <h3>Payment terms</h3>
-                        <p><span class="percent">30%</span> guaranteed Deposit payment on <b>Escrow Account</b></p>
-                        <p><span class="percent">50%</span> guaranteed Balance payment on <b>Escrow Account</b></p>
+                        <p><span class="percent">{{ order.guaranteedDepositTerm }}%</span> guaranteed Deposit payment on <b>Escrow Account</b></p>
+                        <p><span class="percent">{{ order.guaranteedBalanceTerm }}%</span> guaranteed Balance payment on <b>Escrow Account</b></p>
                     </div>
                     <div class="controls">
                         <div class="button-gradient filled orange">
