--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -276,7 +276,7 @@
                         </div>
                         <div class="controls">
                             <div class="button-gradient filled orange">
-                                <button class="btn" type="submit" chatMessageSending>Send</button>
+                                <button class="btn chatMessageSending" type="submit" chatMessageSending>Send</button>
                             </div>
                         </div>
                     </div>
