--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
@@ -312,7 +312,7 @@
                     </div>
                     <div class="controls">
                         <div class="button-gradient filled orange">
-                            <button class="btn" type="submit">Edit Quotation</button>
+                            <button edit-order order-id="{{ order.id }}" class="btn" type="submit">Edit Quotation</button>
                         </div>
                     </div>
                 </div>
