--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -272,7 +272,7 @@
                     <textarea class="textarea" maxlength="512" placeholder="Write your message" id="chat-room">${sendText}</textarea>
                     <div class="upload-box">
                         <div class="row">
-                            <input type="file" name="files[]" id="filer_input1" multiple="multiple">
+                            <input type="file" class="chatFileUpload" name="files[]" id="filer_input1" multiple="multiple">
                         </div>
                         <div class="controls">
                             <div class="button-gradient filled orange">
