--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -295,7 +295,7 @@
                                 </div>
                             {% endfor %}
                         </div>
-                        <div class="document-files">
+                        <!--<div class="document-files">
                             <div class="file-item">
                                 <span>Document</span>
                                 <i class="icon icon-delete-attached" aria-hidden="true"></i>
@@ -321,7 +321,7 @@
                                 <i class="icon icon-delete-attached" aria-hidden="true"></i>
                                 <span>Event_1.pdf</span>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
 
