fix showing payment percents

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -473,7 +473,7 @@
 <!-- NEW Quotation payment section -->
 <script type="text/template" id="quot-payment-tmp">
     <%
-        var balancePercent = data.model.balance_percent;
+        var balancePercent = data.model.balancePercent;
         if (typeof(balancePercent) == 'undefined') {
             balancePercent = 50;
         }
