--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -35,6 +35,10 @@
         'name': '{{ order.clientDetails.name|default('')  }}',
         'person': '{{ order.clientDetails.person|default('')  }}',
     }
+
+    window.selectedRequrement = {
+        "title" : "{{ order.technicalRequirements['requirement']['title'] }}"
+    }
 </script>
 <main class="chat-room">
     {% include '@ActedLegalDocs/Default/confirmBookingModal.html.twig' %}
