--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -35,10 +35,6 @@
         'name': '{{ order.clientDetails.name|default('')  }}',
         'person': '{{ order.clientDetails.person|default('')  }}',
     }
-
-    window.selectedRequrement = {
-        "title" : "{{ order.technicalRequirements['requirement']['title'] }}"
-    }
 </script>
 <main class="chat-room">
     {% include '@ActedLegalDocs/Default/confirmBookingModal.html.twig' %}
@@ -98,13 +94,15 @@
                                 <span class="title">Performance time</span>
                                 <div class="performance-time">
                                     <span class="info">The performance starts at:</span>
-                                    <span class="time">{{ order.performanceStartTime }}</span>
+                                    {#<span class="time">{{ order.performanceStartTime }}</span>#}
+                                    <input type="text" class="edit-time" placeholder="{{ order.performanceStartTime }}" value="{{ order.performanceStartTime }}" @input="saveDetails" v-bind:disabled="userRole == 'ROLE_ARTIST' || !editable">
                                 </div>
                                 <div class="performance-info">
                                     Additional info <i>(This will be included in the booking agreement)</i>
                                 </div>
                                 <div class="performance-info-desc">
-                                    <p>{{ order.event.comments }}</p>
+                                    {#<p>{{ order.event.comments }}</p>#}
+                                    <textarea class="edit-time" @input="saveDetails" v-bind:disabled="userRole == 'ROLE_ARTIST' || !editable">{{ order.additionalInfo }}</textarea>
                                 </div>
                             </div>
                             <div class="row section-info-footer hidden-sm hidden-md hidden-lg">
