--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
@@ -255,7 +255,11 @@
                 <!--quote section holder start-->
                 <div class="holder">
                         {% for p in order.performances %}
-                            <article class="service">
+                            {% set performanceClass = 'service' %}
+                            {% if p.data.type > 0 %}
+                                {% set performanceClass = 'service act-extras' %}
+                            {% endif %}
+                            <article class="{{ performanceClass }}">
                                 <h3 class="package-name">{{ p.data['title'] }}</h3>
                                 <ul class="">
                                     {% for package in p.data.packages %}
@@ -264,9 +268,11 @@
                                             <div class="row">
                                                 {% for option in package['options'] %}
                                                     <div class="col-md-12 no-pad">
-                                                        <span class="short" name="currency1" id="currency1">{{ option['qty'] }}</span>
-                                                        <span class="">x</span>
-                                                        <span class="short" name="currency11" id="currency11">{{ option['duration'] }} min</span>
+                                                        {% if p.data.type < 2 %}
+                                                            <span class="short" name="currency1" id="currency1">{{ option['qty'] }}</span>
+                                                            <span class="">x</span>
+                                                            <span class="short" name="currency11" id="currency11">{{ option['duration'] }} min</span>
+                                                        {% endif %}
                                                         <div class="pull-right">
                                                             <span class="short">{{ option['rates'][0]["price"]['amount'] }}</span>
                                                             <span class="pull-right">GBP</span>
@@ -274,13 +280,18 @@
                                                     </div>
                                                 {% endfor %}
                                             </div>
+                                            {% if p.data.type > 0 %}
+                                                <div class="row">
+                                                    <span class="extra-descr">{{ p.data.comment }}</span>
+                                                </div>
+                                            {% endif %}
                                         </li>
                                     {% endfor %}
                                 </ul>
                             </article>
                         {% endfor %}
 
-                        <article class="service act-extras">
+                        {#<article class="service act-extras">
                             <h3 class="package-name">Extra - 1</h3>
                             <ul class="">
                                 <li>
@@ -301,7 +312,7 @@
                                     </div>
                                 </li>
                             </ul>
-                        </article>
+                        </article>#}
                 </div>
                 <!--quote section holder end-->
                 <div class="row">
