--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/modals.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/modals.html.twig
@@ -2,7 +2,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+                <span aria-hidden="true"></span>
             </button>
             <div class="changeImageContiner"></div>
             <div class="actions">
@@ -20,7 +20,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+                <span aria-hidden="true"></span>
             </button>
             <div class="changeImageContiner"></div>
             <div class="actions">
@@ -37,7 +37,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+                <span aria-hidden="true"></span>
             </button>
             <div class="changeImageContiner"></div>
             <div class="actions">
