--- a/src/Acted/LegalDocsBundle/Resources/views/Default/home.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/home.html.twig
@@ -6,7 +6,7 @@
         <div class="modal-body">
             <div class="modal-content">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                    <span aria-hidden="true"></span>
                 </button>
                 <div class="final-stage">
                     <div class="col-xs-12">
