--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -10,7 +10,7 @@
         <div class="modal-body">
             <div class="modal-content">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                    <span aria-hidden="true"></span>
                 </button>
                 <div class="final-stage">
                     <div class="col-xs-12">
@@ -43,7 +43,7 @@
         <div class="modal-body">
             <div class="modal-content">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                    <span aria-hidden="true"></span>
                 </button>
                 <div class="final-stage">
                     <div class="row">
@@ -73,7 +73,7 @@
         <div class="modal-body">
             <div class="modal-content">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                    <span aria-hidden="true"></span>
                 </button>
                 <div class="final-stage">
                     <div class="row">
@@ -116,7 +116,7 @@
 
 <script type="text/template" id="quot-modal-tmp">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">×</span>
+        <span aria-hidden="true"></span>
     </button>
     <div class="modal-header">
         <h4 class="modal-title">Request from: <%= title %></h4>
