--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSectionEdit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSectionEdit.html.twig
@@ -114,7 +114,7 @@
                         <div class="controls">
                             <div class="hidden error dangerMessagePerf">You should enter all fields to publish performance</div>
                             <div class="hidden success successMessagePerf">Your performance saved</div>
-                            <div class="button-gradient follow orange">
+                            <div class="button-gradient follow">
                                 <!--<button data-toggle="modal" data-target="#freeQuoteModalRegisterd" class="btn">REQUEST FREE QUOTE
                                 </button>-->
                             </div>
@@ -209,7 +209,7 @@
                 <div class="controls">
                     <div class="hidden error dangerMessagePerf">You should enter all fields to publish performance</div>
                     <div class="hidden success successMessagePerf">Your performance saved</div>
-                    <div class="button-gradient follow orange">
+                    <div class="button-gradient follow">
                         <!--<button data-toggle="modal" data-target="#freeQuoteModalRegisterd" class="btn">REQUEST FREE QUOTE
                         </button>-->
                     </div>
